feat: clerk authentication

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,12 @@
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="YOUR_POSTGRESQL_URL_HERE"
 DIRECT_URL="YOUR_DIRECT_POSTGRESQL_URL_HERE"
+
+# Supabase
+NEXT_PUBLIC_SUPABASE_URL="YOUR_SUPABASE_URL_HERE"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="YOUR_SUPABASE_ANON_KEY_HERE"
+
+# Clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="YOUR_CLERK_PUBLISHABLE_KEYL_HERE"
+CLERK_SECRET_KEY="YOUR_CLERK_SECRET_KEY_HERE"
+
