--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@xstate/react": "^4.1.0",
     "next": "^14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
