--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:format": "prisma format",
+    "db:generate": "prisma generate",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
@@ -14,7 +16,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.10",
-    "@prisma/client": "^5.10.2",
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.12.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.25.0",
     "@trpc/client": "next",
@@ -22,11 +27,17 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "@xstate/react": "^4.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.367.0",
     "next": "^14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.2",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
     "xstate": "^5.9.1",
     "zod": "^3.22.4"
   },
@@ -42,7 +53,7 @@
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "prisma": "^5.10.2",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   },
