--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@xstate/react": "^4.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.367.0",
     "next": "^14.1.3",
