--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
@@ -35,7 +36,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.367.0",
-    "next": "^14.1.3",
+    "next": "^14.2.4",
     "next-themes": "^0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
