--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@clerk/nextjs": "^4.29.10",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.16.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.1.0",
@@ -30,6 +31,7 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@uidotdev/usehooks": "^2.4.1",
     "@xstate/react": "^4.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
